# web-mighty

./: .codecov.yml  .gitignore  .kodiak.toml  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md  f  fad  minify_files.py  package.json  requirements.txt  rustfmt.toml  server.docker.toml  server.sample.toml  start_server.py  webpack.config.js
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  clippy.yml  coverage.yml  deploy.yml  docker.yml  fmt.yml  public.yml  test.yml
client/: Cargo.toml
client/src/ws/: list.rs  main.rs  observe.rs  room_user.rs  session.rs
config/: Cargo.toml
config/src/: lib.rs
config/tests/: generic_test.rs  lifetime_test.rs  simple_test.rs  tuple_test.rs
core/: Cargo.toml
core/src/: base.rs  basic.rs  card.rs  game.rs  lib.rs  user.rs
core/tests/: test.rs
mighty/: Cargo.toml
mighty/src/: base.rs  basic.rs  card.rs  command.rs  error.rs  game.rs  lib.rs  state.rs  user.rs
mighty/src/rule/: card_policy.rs  dealer.rs  deck.rs  election.rs  friend.rs  joker_call.rs  missed_deal.rs  mod.rs  pledge.rs  timing.rs  visibility.rs
public/: 404.hbs  Cargo.toml  README.md  game.hbs  index.hbs  list.hbs  login.hbs  mail.hbs  main.hbs  pre-register-complete.hbs  pre-register.hbs  register-complete.hbs  register.hbs  rooms.hbs  settings.hbs
public/js/: index.js
public/js/modules/: user.js  websocket.js  ws.js
public/res/js/: index.js
public/res/js/modules/: ws.js
public/res/scss/: style.scss
public/src/: global.rs  lib.rs  rule.rs
public/src/js/: index.js  list.js  login.js  main.js  pre-register-complete.js  pre-register.js  register-complete.js  register.js
public/src/js/modules/: hash.js  user.js  wasm.js  websocket.js
public/src/scss/: index.scss  list.scss  login.scss  main.scss  pre-register-complete.scss  pre-register.scss  register-complete.scss  register.scss
public/src/scss/modules/: button.scss  color.scss  common.scss  font.scss
public/src/ws/: list.rs  main.rs  mod.rs  observe.rs  room_user.rs  session.rs
public/static/: 404.html  index.hbs  index.html  main.hbs  main.html  mypage.html  profile.html
public/static/css/: style.css  style.css.map
public/static/js/: mighy.js
public/static/res/css/: style.css  style.css.map
public/static/res/scss/: style.scss
public/static/sass/: mystyles.scss
server/: Cargo.toml  README.md
server/src/: app_state.rs  config.rs  db.rs  error.rs  https.rs  lib.rs  main.rs  util.rs
server/src/actor/: chat_ss.rs  group.rs  hub.rs  list.rs  list_ss.rs  mail.rs  main.rs  main_ss.rs  mod.rs  observe.rs  observe_ss.rs  room.rs  room_ss.rs  room_user.rs  server.rs  session.rs  user.rs
server/src/actor/db/: error.rs  game.rs  mod.rs  user.rs
server/src/db/: delete_user.rs  game.rs  login.rs  mod.rs  register.rs  user.rs  user_info.rs
server/src/db/sql/: add_record.sql  add_user.sql  create_game.sql  create_records.sql  create_room.sql  create_user.sql  create_users.sql  drop.sql  init.sql
server/src/game/: mod.rs  room.rs  server.rs  session.rs  user.rs
server/src/handlers/: delete.rs  get.rs  mod.rs  post.rs  websocket.rs
server/src/mail/: mod.rs
server/src/middlewares/: https.rs
server/src/service/: delete.rs  mod.rs  post.rs
server/src/service/get/: mod.rs  pages.rs  ws.rs
server/src/service/post/: credentials.rs  game.rs  mod.rs
server/src/session/: chat.rs  list.rs  main.rs  mod.rs  observe.rs  room.rs
server/src/util/: actor.rs  address.rs  adress.rs  connection.rs  mod.rs  path.rs
sql/: create_room.sql  create_user.sql
static/: game.hbs  index.html  main.hbs  main.html  rooms.hbs  rooms.html
static/res/: .ignore
static/res/js/: index.js  mighy.js  user.js  ws.js
static/res/scss/: style.scss
types/: Cargo.toml
types/src/: lib.rs
util/: gen_self_cert.sh  start_server.py
