[package]
name = "mighty"
version = "0.1.0"
authors = ["buttercrab <jaeyong0201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
"server" = []
"client" = []

[dependencies]
bitflags = "1.2"
config = { path = "../config" }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
