[package]
name = "mighty"
version = "0.1.0"
authors = ["buttercrab <jaeyong0201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
config = { path = "../config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = { version = "0.8", optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
try_from = {version = "0.3.2" , optional = true}

[features]
default = []
server = ["rand", "try_from"]
client = ["wasm-bindgen"]