[package]
name = "public"
version = "0.1.0"
authors = ["buttercrab <jaeyong0201@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mighty = { path = "../mighty", features = ["client"] }

wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
