[package]
name = "server"
version = "1.0.0-dev"
authors = ["buttercrab <jaeyong0201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mighty = { path = "../mighty", default-features = false, features = ["server"] }

actix = "0.10"
actix-identity = "0.3"
actix-web = "3"
actix-web-actors = "3"
bitflags = "1.2"
clap = "3.0.0-beta.2"
deadpool-postgres = "0.6"
derive_more = "0.99"
handlebars = "3.5"
ignore = "0.4"
lettre = "0.10.0-alpha.4"
log = "0.4"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
slog = "2.5"
slog-term = "2.6"
slog-async = "2.5"
slog-scope = "4.3"
slog-stdlog = "4.1"
tokio-postgres = { version = "0.6", features = ["with-uuid-0_8", "with-serde_json-1"] }
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v5"] }
walkdir = "2"

futures = { version = "0.3", optional = true }
notify = { version = "4.0.15", optional = true }
openssl = { version = "0.10", optional = true }

[features]
default = []
watch-file = ["notify"]
https = ["openssl", "actix-web/openssl", "futures"]