[package]
name = "server"
version = "1.0.0-dev"
authors = ["buttercrab <jaeyong0201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"

[dependencies]
mighty = { path = "../mighty", features = ["server"] }
types = { path = "../types", features = ["server"] }

actix = "0.12"
actix-identity = "0.4.0-beta.2"
actix-web = { version = "4.0.0-beta.8", features = ["openssl"] }
actix-web-actors = "4.0.0-beta.6"
anyhow = "1.0"
clap = "4.1.4"
config = "0.9"
deadpool-postgres = "0.9"
derive_more = "0.99"
futures = "0.3"
handlebars = "4"
hex = "0.4"
ignore = "0.4"
jsonwebtoken = "7"
lettre = "0.10.0-rc.3"
log = "0.4"
mime = "0.3"
mime_guess = "2"
openssl = "0.10"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
r2d2_postgres = "0.18"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
slog = "2.5"
slog-term = "2.6"
slog-async = "2.5"
slog-scope = "4.3"
slog-stdlog = "4.1"
walkdir = "2"

notify = { version = "4.0.15", optional = true }

[features]
default = []
watch-file = ["notify"]
