[package]
name = "types"
version = "0.1.0"
authors = ["Jaeyong Sung <jaeyong0201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mighty = { path = "../mighty" }

bitflags = "1.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde"] }

actix = { version = "0.10", optional = true }

[features]
default = []
server = ["actix"]
