[package]
name = "types"
version = "0.1.0"
authors = ["Jaeyong Sung <jaeyong0201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mighty = { path = "../mighty" }

bitflags = "1.2"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
uuid = { version = "0.8", features = ["serde"] }

actix = { version = "0.11.0-beta.1", optional = true }

[features]
default = []
server = ["actix"]
