[package]
name = "types"
version = "0.1.0"
authors = ["Jaeyong Sung <jaeyong0201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mighty = { path = "../mighty" }

bitflags = "1.2"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }

actix = { version = "0.12", optional = true }
anyhow = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }

[features]
default = []
server = ["actix", "anyhow", "serde_json", "sha2", "rand"]
client = ["wasm-bindgen"]
